--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
     background-color: #fff;
     color: #000;
     font-weight: normal;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, Verdana, sans-serif;
     font-size: 24px;
 }
 
