--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,84 @@
 @charset "UTF8";
 
 body {
-    background-color: #fff;
-    color: #000;
-    font-weight: normal;
-    font-family: Arial, Helvetica, Verdana, sans-serif;
+    background-color: rgb(69, 69, 69);
     font-size: 16px;
+    font-weight: normal;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: justify;
 }
 
-a {
+main {
+    margin-top: 32px;
+    margin-bottom: 96px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 32px;
+    background: #ffff;
+    border-radius: 10px;
+    max-width: 1200px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.529);
+}
+
+h1 {
+    color: darkgoldenrod;
+    border: 5px solid #000;
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
+}
+
+h2 {
+    color: rgb(125, 92, 8);
+    margin-left: 20px;
+}
+
+p {
+    margin-left: 20px;
+}
+
+.foto {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.logo {
+    margin-left: 0px;
+}
+
+a,
+a:visited {
+    color: rgb(34, 34, 34);
+    font-weight: bolder;
     text-decoration: none;
-    color: #808080;
 }
 
 a:hover {
     text-decoration: underline;
 }
+
+.foot {
+    text-align: center;
+    color: #ffffff;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #000000;
+    text-align: center;
+}
+
+.foot a {
+    color: #606060;
+    text-decoration: none;
+}
+
+.foot a:hover {
+    text-decoration: underline;
+}
+
+/* div da aula06*/
 
 div#nome {
     color: rgba(3, 3, 3, 0.7);
